--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/public/mainstream.ico">
+    <link rel="icon" type="image/x-icon" href="mainstream.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Mainstream</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
